# scrapy-servimed

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
orderQueue/: run_order_consumer.py
orderQueue/consumers/: order_consumer.py
servimedQueue/: requirements.txt  run_post_products_consumer.py  run_scraper_consumer.py
servimedQueue/consumers/: consumer_start_scrapy.py
servimedQueue/utils/: auth.py  postProduct.py  post_products.py  stream_client_worker.py  worker_stream.py
servimedQueue/workers/: stream_client_worker.py
servimedScraper/: run_spider.py  scrapy.cfg
servimedScraper/servimedScraper/: items.py  middlewares.py  pipelines.py  settings.py
servimedScraper/servimedScraper/spiders/: products.py
servimedScraper/servimedScraper/utils/: jwt.py  requests.py  xcart.py
shared/: auth.py
