[project]
name = "scrapy-servimed"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielfelipegonso",email = "gabrielfelipegonso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]
[tool.poetry]
packages = [
  { include = "servimedScraper" }   # <- esta é a pasta do pacote
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
ruff = "^0.12.10"

